--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+  @apply bg-background min-h-screen !important;
+}
+
+#root, #__next {
+  @apply min-h-screen;
+}
